@@ -1,3 +1,9 @@
+Changes in @NEW@:
+  o Client Changes:
+    * Conary will now allow generic options to be placed before the command
+      you are giving to conary.  For example, 'conary --root=/foo query'
+      will now work.
+
 Changes in 1.0.10:
   o Client Changes
     * Given a system based on rPath linux where you only installed
